# PolicyGate

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: bench.py
docs/: API.md  ARCHITECTURE.md  BENCHMARK.md  VERIFICATION.md
policygate/: __init__.py  api.py  cli.py  loader.py  rbac.py  rule.py  store.py
policygate/adapters/: __init__.py  base.py  iptables.py  nftables.py  verify.py
policygate/analysis/: __init__.py  detector.py  logscan.py  simulator.py
policygate/workflow/: __init__.py  service.py  state.py
sample_data/: policies.csv
tests/: test_adapters.py  test_api.py  test_detector.py  test_loader_validation.py  test_rbac.py  test_rollback_audit.py  test_rule.py  test_scale_concurrency.py  test_simulator.py  test_verify.py  test_workflow.py
